--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
    <!--Botón de Whatsapp-->
    <div class="btn-whatsapp">
     <a href="https://api.whatsapp.com/send?phone=+5492995282169" target="_blank">
-    <img src="img/whatsapp.png" alt="">
+   <span title="Hola, hablemos por Whatsapp"><img src="img/whatsapp.png" alt=""></span>
     </a>
     </div>
 <nav>
