--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio Cristian Dal Piva Diseñador UX Designer</title>
+    <meta property="og:site_name"content="Cristian Dal Piva UX Designer"/>
+    <meta property="og:title"content="Portfolio Cristian Dal Piva"/>
+    <meta property="og:description"content="Sitio web de Portfolio. Expongo algunos de mis proyectos e información profesional"/>
+    <meta property="og:image"content="img\vistaprevia.png"></metaproperty>
+    <meta property="og:url"content="https://cristiandalpiva.github.io/portfolioUXUI/"></metaproperty>
+    <title>Portfolio Cristian Dal Piva UX Designer</title>
 
 
 
