--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta property="og:site_name"content="Cristian Dal Piva UX Designer"/>
     <meta property="og:title"content="Portfolio Cristian Dal Piva"/>
     <meta property="og:description"content="Sitio web de Portfolio. Expongo algunos de mis proyectos e información profesional"/>
-    <meta property="og:image"content="img\vistaprevia.png"></metaproperty>
+    <meta property="og:image"content="img\vistaprevia.jpg"></metaproperty>
     <meta property="og:url"content="https://cristiandalpiva.github.io/portfolioUXUI/"></metaproperty>
     <title>Portfolio Cristian Dal Piva UX Designer</title>
 
