--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
 
    <!--Botón de Whatsapp-->
    <div class="btn-whatsapp">
-    <a href="https://api.whatsapp.com/send?phone=+5492995282169" target="_blank">
-   <span title="Hola, hablemos por Whatsapp"><img src="img/whatsapp.png" alt=""></span>
+    
+    <a href="https://api.whatsapp.com/send?phone=5492995282169&text=Hola. Soy Cristian, UX Designer, es un placer que estemos en contacto. Estoy a disposición para responder tu consulta o ampliar información de mí perfil profesional" target="_blank">
+   <img src="img/whatsapp.png" alt="">
     </a>
     </div>
 <nav>
