--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:site_name"content="Cristian Dal Piva UX Designer"/>
-    <meta property="og:title"content="Portfolio Cristian Dal Piva"/>
-    <meta property="og:description"content="Sitio web de Portfolio. Expongo algunos de mis proyectos e información profesional"/>
+    <meta property="og:title"content="Porfolio Cristian Dal Piva"/>
+    <meta property="og:description"content="Sitio web de Porfolio. Expongo algunos de mis proyectos e información profesional"/>
     <meta property="og:image"content="img\vistaprevia.jpg"></metaproperty>
-    <meta property="og:url"content="https://cristiandalpiva.github.io/portfolioUXUI/"></metaproperty>
-    <title>Portfolio Cristian Dal Piva UX Designer</title>
+    <meta property="og:url"content="https://cristiandalpiva.github.io/uxdesigner/"></metaproperty>
+    <title>Porfolio Cristian Dal Piva UX Designer</title>
 
 
 
@@ -74,13 +74,13 @@
             <div class="articulo" data-aos="zoom-in-right">
              <img src="img/Case Study.svg" alt="Portada Case Study"> 
                 <h3>Case Study-EcoFun</h3>
-               <p>App mobile que promueve en niños la adquisición de buenos hábitos en el marco de las 3 RRR. En el diseño se usó el modelo de doble diamante.</p> 
+               <p>App mobile que promueve en niños la adquisición de buenos hábitos en el marco de las 3 RRR.  El proceso de diseño se basó en la metodología del Design Thinking.</p> 
               <buttom> <a href="https://www.behance.net/gallery/127918989/EcoFun-Case-Study-UXUI" target="_blank" rel="noopener noreferrer">Ver Proyecto</a></buttom>
             </div>
 
             <div class="articulo" data-aos="zoom-in-right"> 
                 <img src="img/Portfolio.svg" alt="Portada portfolio UX UI">
-                <h3>Portfolio</h3>
+                <h3>Porfolio</h3>
                <p>Primer sitio web responsive hecho con HTML, CSS y JavaScript. Para definir el contenido se tuvo en cuenta la recomendaciòn de especialstas de UX. </p> 
                <a href="https://www.behance.net/gallery/136027969/Mi-proceso-para-hacer-mi-Portfolio-UX" target="_blank" rel="noopener noreferrer">Ver proyecto</a>
             </div>
@@ -137,11 +137,11 @@
                     <a href="https://github.com/cristiandalpiva" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i></a>
                 </div>
 
-                <div>Portfolio UX 2022</div>
+                <div>Porfolio UX 2022</div>
 
             </footer>
 
-            <div class="creditos">Portfolio UX 2022</div>
+            <div class="creditos">Porfolio UX 2022</div>
        
 
     <script src="script,js"></script>
