--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
             </div>
 
             <div class="articulo" data-aos="zoom-in-right"> 
-                <img src="img/Portfolio.svg" alt="Portada portfolio UX UI">
+                <img src="img/Porfolio.svg" alt="Portada portfolio UX UI">
                 <h3>Porfolio</h3>
-               <p>Primer sitio web responsive hecho con HTML, CSS y JavaScript. Para definir el contenido se tuvo en cuenta la recomendaciòn de especialstas de UX. </p> 
+               <p>Primer sitio web responsive hecho con HTML, CSS y JavaScript. Para definir el contenido se tuvo en cuenta la recomendaciòn de especialstas de UX.</p> 
                <a href="https://www.behance.net/gallery/136027969/Mi-proceso-para-hacer-mi-Portfolio-UX" target="_blank" rel="noopener noreferrer">Ver proyecto</a>
             </div>
 
@@ -113,8 +113,7 @@
 
             <div class="about" data-aos="zoom-in-right">
              <img src="img/fotoSobreMi.png" alt="foto personal"> 
-             <h2>Soy una persona amante del Diseño UX/UI, la comunicación y la programación Web. Me gusta trabajar en equipo, enseñar, curiosear lo que no conozco y generar soluciones digitales. 
-                Busco poder aportar mis habilidades profesionales como diseñador UX/UI y ser parte de un equipo que desarrolle soluciones digitales.</h2>
+             <h2>Soy un profesional de la comunicación, con experiencia en trabajo en equipo, reflexivo y con una visión de la tecnología orientada a las necesidades de las personas. Mi objetivo es poder integrar mis habilidades de Diseño UX , comunicación y programación a un equipo con proyectos innovadores</h2>
     
             </div>
 
