--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <div class="texto-dos">Soy Cristian Dal Piva</div>
             <div class="texto-tres">UX Designer</div>
             <div class="texto-cuatro">de Neuquén. Argentina</div>
-            <div class="boton"><button type="submit" onclick="window.open('Cristian Dal Piva Diseñador UX.pdf')">Descargar CV</button></div>
+            <div class="boton"><button type="submit" onclick="window.open('UX Designer Cristian Dal Piva.pdf')">Descargar CV</button></div>
         </section>
         <img src="img/foto.svg" alt="foto de Cristian">
     </section>       
@@ -84,28 +84,15 @@
             <div class="articulo" data-aos="zoom-in-right">
              <img src="img/Case Study.svg" alt="Portada Case Study"> 
                 <h3>Case Study-EcoFun</h3>
-               <p>App mobile que promueve en niños la adquisición de buenos hábitos en el marco de las 3 RRR.  El proceso de diseño se basó en la metodología del Design Thinking.</p> 
+               <p>App mobile que promueve en personas menores de 12 años la adquisición de buenos hábitos en el marco de las 3 RRR.  El proceso de diseño se basó en la metodología del Design Thinking.</p> 
               <buttom> <a href="https://www.behance.net/gallery/127918989/EcoFun-Case-Study-UXUI" target="_blank" rel="noopener noreferrer">Ver Proyecto</a></buttom>
             </div>
 
-            <div class="articulo" data-aos="zoom-in-right"> 
-                <img src="img/Porfolio.svg" alt="Portada portfolio UX UI">
-                <h3>Porfolio</h3>
-               <p>Primer sitio web responsive hecho con HTML, CSS y JavaScript. Para definir el contenido se tuvo en cuenta la recomendaciòn de especialstas de UX.</p> 
-               <a href="https://www.behance.net/gallery/136027969/Mi-proceso-para-hacer-mi-Portfolio-UX" target="_blank" rel="noopener noreferrer">Ver proyecto</a>
-            </div>
-
-            <div class="articulo" data-aos="zoom-in-right">
-               <img src="img/Nueva Jugada.svg" alt="Portada Nueva Jugada">
-                <h3>Primer sitio Web (no responsive)</h3>
-               <p>Sitio Web estático hecho en HTML, CSS y JavaScript. La inspiración de la temática surgió de la columna radial que realizaba en el programa radial "Cambio de Frente". </p> 
-               <a href="https://www.behance.net/gallery/135918501/Una-columna-radial-hecha-codigo" target="_blank" rel="noopener noreferrer">Ver proyecto</a>
-            </div>                            
- 
+            
             <div class="articulo" data-aos="zoom-in-right">
                 <img src="img/Tesis.svg" alt="Portada investigación Mundial">
                 <h3>Investigación durante la cobertura del mundial</h3>
-               <p>Tesis de grado de Comunicación Social. Se empleó una metodología cuantitativa y cualitativa. La muestran fueron dos diarios regionales de la Patagonia.</p> 
+               <p>Tesina de grado de Comunicación Social. Se empleó una metodología cuantitativa y cualitativa. La investigación se centró en analizar las ofertas de participación que ofrecieron dos periódicos digitales de la Patagonia.</p> 
                <a href="https://www.behance.net/gallery/135754113/Mi-primera-experiencia-como-investigador" target="_blank" rel="noopener noreferrer">Ver proyecto</a>
             </div>
 
@@ -131,11 +118,12 @@
             
                 <div class="box-skills">
                     <h2>Skills</h2>
-                    <h4><i class="fas fa-check-circle"></i>Comunicación</h4>
                     <h4><i class="fas fa-check-circle"></i>UX Research</h4>
+                    <h4><i class="fas fa-check-circle"></i>UX Writing</h4>
                     <h4><i class="fas fa-check-circle"></i> Front End (HTML, CSS y JavaScript)</h4>
-                    <h4><i class="fas fa-check-circle"></i> UX Writing</h4>
+                    <h4><i class="fas fa-check-circle"></i> Comunicación</h4>
                     <h4><i class="fas fa-check-circle"></i> Marketing Digital</h4>
+                    <h4><i class="fas fa-check-circle"></i> Trabajo en equipo</h4>
                 </div>
             </div>     
 
