--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
             <div class="about" data-aos="zoom-in-right">
              <img src="img/fotoSobreMi.png" alt="foto personal"> 
-             <h2>Soy un profesional de la comunicación, con experiencia en trabajo en equipo, reflexivo y con una visión de la tecnología orientada a las necesidades de las personas. Mi objetivo es poder integrar mis habilidades de Diseño UX , comunicación y programación a un equipo con proyectos innovadores</h2>
+             <h2>Diseñador UX con habilidades en comunicación, con experiencia en trabajo en equipo y reflexivo. Mi objetivo es aportar mis conocimientos de UX Research, Prototipado y         Front-end a un equipo con proyectos innovadores.</h2>
     
             </div>
 
