--- a/index.html
+++ b/index.html
@@ -82,9 +82,16 @@
         <div class="contenedor-articulo">
 
             <div class="articulo" data-aos="zoom-in-right">
-             <img src="img/Case Study.svg" alt="Portada Case Study"> 
+                <img src="img/Travelin.svg" alt="Portada Case Study Travelin"> 
+                   <h3>Case Study-Travelin</h3>
+                  <p>Proyecto grupal de Diseño UX que se focalizó en crear una solución digital que facilitara la organización de viajes grupales. Desempeñé mayormente tareas como UX Researcher y UX Writer.</p> 
+                 <buttom> <a href="https://medium.com/@travelin_/experiencias-compartidas-travelin-la-app-que-facilita-la-creaci%C3%B3n-colaborativa-de-viajes-7833a9bf10b5" target="_blank" rel="noopener noreferrer">Ver Proyecto</a></buttom>
+               </div>
+
+            <div class="articulo" data-aos="zoom-in-right">
+             <img src="img/Case Study.svg" alt="Portada Case Study EcoFun"> 
                 <h3>Case Study-EcoFun</h3>
-               <p>App mobile que promueve en personas menores de 12 años la adquisición de buenos hábitos en el marco de las 3 RRR.  El proceso de diseño se basó en la metodología del Design Thinking.</p> 
+               <p>Proyecto individual que promueve en personas menores de 12 años la adquisición de buenos hábitos en el marco de las 3 RRR.  El proceso de diseño se basó en la metodología del Design Thinking.</p> 
               <buttom> <a href="https://www.behance.net/gallery/127918989/EcoFun-Case-Study-UXUI" target="_blank" rel="noopener noreferrer">Ver Proyecto</a></buttom>
             </div>
 
@@ -110,7 +117,7 @@
 
             <div class="about" data-aos="zoom-in-right">
              <img src="img/fotoSobreMi.png" alt="foto personal"> 
-             <h2>Diseñador UX con habilidades en comunicación, con experiencia en trabajo en equipo y reflexivo. Mi objetivo es aportar mis conocimientos de UX Research, Prototipado y         Front-end a un equipo con proyectos innovadores.</h2>
+             <h2>Diseñador UX con habilidades en comunicación, con experiencia en trabajo en equipo y reflexivo. Mi objetivo es aportar mis conocimientos de UX Research y UX Writing a un equipo con proyectos innovadores.</h2>
     
             </div>
 
