--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <div class="texto-dos">Soy Cristian Dal Piva</div>
             <div class="texto-tres">UX Designer</div>
             <div class="texto-cuatro">de Neuquén. Argentina</div>
-            <div class="boton"><button type="submit" onclick="window.open('UX Designer Cristian Dal Piva.pdf')">Descargar CV</button></div>
+            <div class="boton"><button type="submit" onclick="window.open('Cristian Dal Piva-UX Designer.docx')">Descargar CV</button></div>
         </section>
         <img src="img/foto.svg" alt="foto de Cristian">
     </section>       
