--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <div class="texto-dos">Soy Cristian Dal Piva</div>
             <div class="texto-tres">UX Designer</div>
             <div class="texto-cuatro">de Neuquén. Argentina</div>
-            <div class="boton"><button type="submit" onclick="window.open('Cristian Dal Piva-UX Designer.docx')">Descargar CV</button></div>
+            <div class="boton"><button type="submit" onclick="window.open('CV UX Researcher Cristian Dal Piva.docx')">Descargar CV</button></div>
         </section>
         <img src="img/foto.svg" alt="foto de Cristian">
     </section>       
@@ -129,20 +129,21 @@
 
             <div class="about" data-aos="zoom-in-right">
              <img src="img/fotoSobreMi.png" alt="foto personal"> 
-             <h2>Diseñador UX con habilidades en comunicación, con experiencia en trabajo en equipo y reflexivo. Mi objetivo es aportar mis conocimientos de UX Research y UX Writing a un equipo con proyectos innovadores.</h2>
+             <h2>Como UX Researcher con una sólida base en comunicación, me especializo en traducir las necesidades de los usuarios en soluciones digitales efectivas. Mi enfoque se adapta a cada etapa del proyecto, desde la investigación inicial hasta la evaluación final. A través de entrevistas, encuestas y pruebas de usabilidad, desvelo los insights que guían el diseño de experiencias intuitivas y satisfactorias. Mi objetivo es construir puentes entre los usuarios y los productos, garantizando que cada interacción sea significativa y memorable.</h2>
     
             </div>
 
             <div class="about" data-aos="zoom-in-right">
             
-                <div class="box-skills">
+                <div class="box-Servicios">
                     <h2>Skills</h2>
-                    <h4><i class="fas fa-check-circle"></i>UX Research</h4>
-                    <h4><i class="fas fa-check-circle"></i>UX Writing</h4>
-                    <h4><i class="fas fa-check-circle"></i> Front End (HTML, CSS y JavaScript)</h4>
-                    <h4><i class="fas fa-check-circle"></i> Comunicación</h4>
-                    <h4><i class="fas fa-check-circle"></i> Marketing Digital</h4>
-                    <h4><i class="fas fa-check-circle"></i> Trabajo en equipo</h4>
+                    <h4><i class="fas fa-check-circle"></i>Análisis de actores y competidores</h4>
+                    <h4><i class="fas fa-check-circle"></i>Pruebas de usabilidad</h4>
+                    <h4><i class="fas fa-check-circle"></i> Análisis heurístico)</h4>
+                    <h4><i class="fas fa-check-circle"></i> Entrevistas/Encuestas</h4>
+                    <h4><i class="fas fa-check-circle"></i> Creación de User Persona</h4>
+                    <h4><i class="fas fa-check-circle"></i> User Journey Map</h4>
+                    <h4><i class="fas fa-check-circle"></i> Auditoría UX</h4>
                 </div>
             </div>     
 
