--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
 
             <div class="about" data-aos="zoom-in-right">
             
-                <div class="box-Servicios">
-                    <h2>Skills</h2>
+                <div class="box-skills">
+                    <h2>Servicios</h2>
                     <h4><i class="fas fa-check-circle"></i>Análisis de actores y competidores</h4>
                     <h4><i class="fas fa-check-circle"></i>Pruebas de usabilidad</h4>
                     <h4><i class="fas fa-check-circle"></i> Análisis heurístico</h4>
