--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <div class="articulo" data-aos="zoom-in-right">
                 <img src="img/Travelin.svg" alt="Portada Case Study Travelin"> 
                    <h3>Case Study-Travelin</h3>
-                  <p>Travelin es una solución digital que tiene como objetivo facilitar la organización de viajes grupales. Desempeñé mayormente tareas como UX Researcher y UX Writer.</p> 
+                  <p>Travelin es una solución digital que tiene como objetivo facilitar la organización de viajes grupales. Cuenta con herramientas de organización, la integración de una IA y un sistema para faciltar la toma de decisiones. Dentro del equipo de diseño me desempeñé como UX Researcher y UX Writer.</p> 
                  <buttom> <a href="https://medium.com/@travelin_/experiencias-compartidas-travelin-la-app-que-facilita-la-creaci%C3%B3n-colaborativa-de-viajes-7833a9bf10b5" target="_blank" rel="noopener noreferrer">Ver Proyecto</a></buttom>
                </div>
 
