--- a/index.html
+++ b/index.html
@@ -93,6 +93,13 @@
         <div class="titulo"><span>Proyectos</span> </div>
         <div class="contenedor-articulo">
 
+              <div class="articulo" data-aos="zoom-in-right">
+                <img src="img/ArregloYa.svg" alt="Portada ArregloYa UX Research"> 
+                   <h3>UX Research-AreglloYa</h3>
+                  <p>ArregloYa es una plataforma que conecta a profesionales de mantenimiento del hogar con clientes. El equipo de UX identificó necesidades, puntos de dolor y áread de oportunidad que permitieron priorizar las funcionalidades del MVP.</p> 
+                 <buttom> <a href="https://www.behance.net/gallery/217961129/ArregloYa-UX-Research" target="_blank" rel="noopener noreferrer">Ver Proyecto</a></buttom>
+               </div>
+
             <div class="articulo" data-aos="zoom-in-right">
                 <img src="img/Travelin.svg" alt="Portada Case Study Travelin"> 
                    <h3>Case Study-Travelin</h3>
@@ -158,7 +165,7 @@
 
             </footer>
 
-            <div class="creditos">Porfolio UX 2024</div>
+            <div class="creditos">Porfolio UX 2025</div>
        
 
     <script src="script,js"></script>
