--- a/index.html
+++ b/index.html
@@ -95,21 +95,21 @@
 
               <div class="articulo" data-aos="zoom-in-right">
                 <img src="img/ArregloYa.svg" alt="Portada ArregloYa UX Research"> 
-                   <h3>UX Research-AreglloYa</h3>
-                  <p>ArregloYa es una plataforma que conecta a profesionales de mantenimiento del hogar con clientes. El equipo de UX identificó necesidades, puntos de dolor y áread de oportunidad que permitieron priorizar las funcionalidades del MVP.</p> 
+                   <h3>ARREGLOYA</h3>
+                  <p>ArregloYa es una plataforma que conecta a profesionales de mantenimiento del hogar con clientes. El equipo de UX identificó necesidades, puntos de dolor y áreas de oportunidad que permitieron priorizar las funcionalidades del MVP.</p> 
                  <buttom> <a href="https://www.behance.net/gallery/217961129/ArregloYa-UX-Research" target="_blank" rel="noopener noreferrer">Ver Proyecto</a></buttom>
                </div>
 
             <div class="articulo" data-aos="zoom-in-right">
                 <img src="img/Travelin.svg" alt="Portada Case Study Travelin"> 
-                   <h3>Case Study-Travelin</h3>
+                   <h3>TRAVELIN</h3>
                   <p>Travelin cuenta con herramientas de organización, la integración de una IA y un sistema para optimizar la toma de decisiones en los viajes grupales. Dentro del equipo de diseño me desempeñé como UX Researcher.</p> 
                  <buttom> <a href="https://medium.com/@travelin_/experiencias-compartidas-travelin-la-app-que-facilita-la-creaci%C3%B3n-colaborativa-de-viajes-7833a9bf10b5" target="_blank" rel="noopener noreferrer">Ver Proyecto</a></buttom>
                </div>
 
             <div class="articulo" data-aos="zoom-in-right">
              <img src="img/Case Study.svg" alt="Portada Case Study EcoFun"> 
-                <h3>Case Study-EcoFun</h3>
+                <h3>ECOFUN</h3>
                <p>Aplicación didáctiva y lúdica que promueve en personas menores de 12 años la adquisición de buenos hábitos en el marco de las 3 RRR.  El proceso de diseño se basó en la metodología del Design Thinking.</p> 
               <buttom> <a href="https://www.behance.net/gallery/127918989/EcoFun-Case-Study-UXUI" target="_blank" rel="noopener noreferrer">Ver Proyecto</a></buttom>
             </div>
@@ -117,7 +117,7 @@
             
             <div class="articulo" data-aos="zoom-in-right">
                 <img src="img/Tesis.svg" alt="Portada investigación Mundial">
-                <h3>Investigación durante la cobertura del mundial</h3>
+                <h3>INVESTIGACIÓN DE LA COBERTURA DEL MUNDIAL</h3>
                <p>Tesina de grado de Comunicación Social. Se empleó una metodología cuantitativa y cualitativa. La investigación se centró en analizar las ofertas de participación que ofrecieron dos periódicos digitales de la Patagonia.</p> 
                <a href="https://www.behance.net/gallery/135754113/Mi-primera-experiencia-como-investigador" target="_blank" rel="noopener noreferrer">Ver proyecto</a>
             </div>
