--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <div class="articulo" data-aos="zoom-in-right">
              <img src="img/Case Study.svg" alt="Portada Case Study EcoFun"> 
                 <h3>EcoFun</h3>
-               <p>Aplicación didáctiva y lúdica que promueve en personas menores de 12 años la adquisición de buenos hábitos en el marco de las 3 RRR.  El proceso de diseño se basó en la metodología del Design Thinking.</p> 
+               <p>Diseñé una aplicación didáctiva y lúdica que promueve en personas menores de 12 años la adquisición de buenos hábitos en el marco de las 3 RRR.  El proceso de diseño se basó en la metodología del Design Thinking.</p> 
               <buttom> <a href="https://www.behance.net/gallery/127918989/EcoFun-Case-Study-UXUI" target="_blank" rel="noopener noreferrer">Ver Proyecto</a></buttom>
             </div>
 
