--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
              <img src="img/fotoSobreMi.png" alt="foto personal"> 
              <h2>Como UX Researcher con una sólida base en comunicación, me especializo en traducir las necesidades de los usuarios en soluciones digitales efectivas. Mi enfoque se adapta a cada etapa del proyecto, desde la investigación inicial hasta la evaluación final. A través de entrevistas, encuestas, pruebas de usabilidad y otras metodologías de investigación, desvelo insights que guian el diseño de experiencias intuitivas y satisfactorias. Mi objetivo es construir puentes entre los usuarios y los productos, garantizando que cada interacción sea significativa y memorable.</h2>
     
-            </di
+            </div>
 
             <div class="about" data-aos="zoom-in-right">
             
