--- a/index.html
+++ b/index.html
@@ -147,9 +147,10 @@
                     <h4><i class="fas fa-check-circle"></i>Análisis de actores y competidores</h4>
                     <h4><i class="fas fa-check-circle"></i>Pruebas de usabilidad</h4>
                     <h4><i class="fas fa-check-circle"></i> Análisis heurístico</h4>
-                    <h4><i class="fas fa-check-circle"></i> Entrevistas/Encuestas</h4>
+                    <h4><i class="fas fa-check-circle"></i> Entrevistas</h4>
+                    <h4><i class="fas fa-check-circle"></i> Encuestas</h4>
                     <h4><i class="fas fa-check-circle"></i> Creación de User Persona</h4>
-                    <h4><i class="fas fa-check-circle"></i> User Journey Map/Mapas de Empatia</h4>
+                    <h4><i class="fas fa-check-circle"></i> User Journey Map</h4>
                     <h4><i class="fas fa-check-circle"></i> Auditoría UX</h4>
                 </div>
             </div>     
