--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:site_name"content="Cristian Dal Piva UX Designer"/>
+    <meta property="og:site_name"content="Cristian Dal Piva UX Researcher"/>
     <meta property="og:title"content="Porfolio Cristian Dal Piva"/>
     <meta property="og:description"content="Sitio web de Porfolio. Expongo algunos de mis proyectos e información profesional"/>
     <meta property="og:image"content="img\vistaprevia.jpg"></metaproperty>
     <meta property="og:url"content="https://cristiandalpiva.github.io/uxdesigner/"></metaproperty>
-    <title>Porfolio Cristian Dal Piva UX Designer</title>
+    <title>Porfolio Cristian Dal Piva UX Researcher</title>
 
 
 
@@ -44,7 +44,7 @@
    <!--Botón de Whatsapp-->
    <div class="btn-whatsapp">
     
-    <a href="https://api.whatsapp.com/send?phone=5492995282169&text=Hola. Soy Cristian, UX Designer, es un placer que estemos en contacto. Estoy a disposición para responder tu consulta o ampliar información de mí perfil profesional" target="_blank">
+    <a href="https://api.whatsapp.com/send?phone=5492995282169&text=Hola. Soy Cristian, UX Researcher, es un placer que estemos en contacto. Estoy a disposición para responder tu consulta o ampliar información de mí perfil profesional" target="_blank">
    <img src="img/whatsapp.png" alt="">
     </a>
     </div>
@@ -80,7 +80,7 @@
             <div class="texto-dos">Soy Cristian Dal Piva</div>
             <div class="texto-tres">UX Designer</div>
             <div class="texto-cuatro">de Neuquén. Argentina</div>
-            <div class="boton"><button type="submit" onclick="window.open('CV UX Researcher Cristian Dal Piva.docx')">Descargar CV</button></div>
+            <div class="boton"><button type="submit" onclick="window.open('UX Researcher Cristian Dal Piva.docx')">Descargar CV</button></div>
         </section>
         <img src="img/foto.svg" alt="foto de Cristian">
     </section>       
