--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </div>
 <nav>
 <div class="navbar">
-    <div class="logo"><a href="#header">CDP Diseñador UX</a></div>
+    <div class="logo"><a href="#header">CDP UX Researcher</a></div>
     <ul class="menu">
         <li><a href="#proyectos">Proyectos</a></li>
         <li><a href="#sobreMi">Sobre mí</a></li>
