--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <section class="textos-header">
             <div class="texto-uno">Hola,</div>
             <div class="texto-dos">Soy Cristian Dal Piva</div>
-            <div class="texto-tres">UX Designer</div>
+            <div class="texto-tres">UX Researcher</div>
             <div class="texto-cuatro">de Neuquén. Argentina</div>
             <div class="boton"><button type="submit" onclick="window.open('UX Researcher Cristian Dal Piva.docx')">Descargar CV</button></div>
         </section>
