--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <div class="texto-dos">Soy Cristian Dal Piva</div>
             <div class="texto-tres">UX Researcher</div>
             <div class="texto-cuatro">de Neuquén. Argentina</div>
-            <div class="boton"><button type="submit" onclick="window.open('UX Researcher Cristian Dal Piva.docx')">Descargar CV</button></div>
+            <div class="boton"><button type="submit" onclick="window.open('UX Researcher Cristian D Dal Piva.pdf')">Descargar CV</button></div>
         </section>
         <img src="img/foto.svg" alt="foto de Cristian">
     </section>       
