--- a/index.html
+++ b/index.html
@@ -93,10 +93,17 @@
         <div class="titulo"><span>Proyectos</span> </div>
         <div class="contenedor-articulo">
 
+             <div class="articulo" data-aos="zoom-in-right">
+                <img src="img/InvestigaciónPlataformaLaboral.svg" alt="Portada Rediseño de una plataforma laboral UX Research"> 
+                   <h3>Rediseño de una plataforma laboral inclusiva</h3>
+                  <p>Lideré un proyecto UX en conjunto con una organización, abordando la inclusión laboral. Tras identificar barreras en plataformas actuales, definimos un enfoque estratégico que sentó las bases para un rediseño centrado en mejorar el acceso de sectores vulnerables.</p> 
+                 <buttom> <a href="https://www.behance.net/gallery/225532545/UX-Research-en-una-plataforma-laboral-inclusiva" target="_blank" rel="noopener noreferrer">Ver Proyecto</a></buttom>
+               </div>
+
               <div class="articulo" data-aos="zoom-in-right">
                 <img src="img/ArregloYa.svg" alt="Portada ArregloYa UX Research"> 
                    <h3>ArregloYa</h3>
-                  <p>ArregloYa es una plataforma que conecta a profesionales de mantenimiento del hogar con clientes. El equipo de UX identificó necesidades, puntos de dolor y áreas de oportunidad que permitieron priorizar las funcionalidades del MVP.</p> 
+                  <p>Participé en el equipo de UX de ArregloYa, donde analizamos necesidades y puntos críticos en la experiencia de usuarios y profesionales. A partir de la priorización de funcionalidades clave, desarrollamos el MVP, logrando una plataforma eficiente que conecta a clientes con especialistas en mantenimiento del hogar.</p> 
                  <buttom> <a href="https://www.behance.net/gallery/217961129/ArregloYa-UX-Research" target="_blank" rel="noopener noreferrer">Ver Proyecto</a></buttom>
                </div>
 
