--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
             <div class="texto-dos">Soy Cristian Dal Piva</div>
             <div class="texto-tres">UX Researcher</div>
             <div class="texto-cuatro">de Neuquén. Argentina</div>
-            <div class="boton"><button type="submit" onclick="window.open('UX Researcher Cristian D Dal Piva.pdf')">Descargar CV</button></div>
+            <div class="boton"><button type="submit" onclick="window.open('CV UX Researcher Cristian Dal Piva.pdf')">Descargar CV</button></div>
         </section>
-        <img src="img/foto.svg" alt="foto de Cristian">
+        <img src="img/Foto portafolio.svg" alt="foto de Cristian">
     </section>       
 </div>
 
@@ -121,15 +121,6 @@
               <buttom> <a href="https://www.behance.net/gallery/127918989/EcoFun-Case-Study-UXUI" target="_blank" rel="noopener noreferrer">Ver Proyecto</a></buttom>
             </div>
 
-            
-            <div class="articulo" data-aos="zoom-in-right">
-                <img src="img/Tesis.svg" alt="Portada investigación Mundial">
-                <h3>Investigación de la cobertura del Mundial</h3>
-               <p>Tesina de grado de Comunicación Social. Se empleó una metodología cuantitativa y cualitativa. La investigación se centró en analizar las ofertas de participación que ofrecieron dos periódicos digitales de la Patagonia.</p> 
-               <a href="https://www.behance.net/gallery/135754113/Mi-primera-experiencia-como-investigador" target="_blank" rel="noopener noreferrer">Ver proyecto</a>
-            </div>
-
-        
         </div>                  
     </div>
 </section>
